FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20160112:
AUTHOR: amdmi3@FreeBSD.org

  Support has been added for "or later" variants of GNU licenses
  (e.g. LICENSE=GPLv2+) and for Public Domain (LICENSE=PD).

  Complete list of new LICENSE values:

  AGPLv3+ GPLv1+ GPLv2+ GPLv3+ GPLv3RLE+ LGPL20+ LGPL21+ LGPL3+ PD

20160110:
AUTHOR: bapt@FreeBSD.org

  USE_FIREBIRD and USE_SQLITE has been replaced by USES=firebird and
  USES=sqlite

20151105:
AUTHOR: mat@FreeBSD.org

  Change the meaning of NO_WRKSUBDIR to force a WRKDIR != WRKSRC.

  Right now, NO_WRKSUBDIR means that the extraction does not produce a
  subdirectory, and that everything goes straight into WRKDIR.  It is
  problematic, because during the build of a port, quite a few files
  are created in there, and then, a stage directory, where everything
  is installed, and then a pkg directory where the package is created,
  and those often conflict, or get in the way, of the building
  process.

  With this, NO_WRKSUBDIR will extract the distfiles directly into
  WRKSRC instead of WRKDIR.  In this case, WRKSRC is artificial and is
  based on PKGNAME and not DISTNAME, mitigate conflicts with rc files.

20151022:
AUTHOR: amdmi3@FreeBSD.org

  Improved support for USES=shebangfix

  - We now support multiple values for *_OLD_CMD
  - We replace more variants by default (/bin/${lang}, /usr/bin/${lang},
    /usr/bin/env ${lang}).
  - shebangfix now also supports lua if USES=lua is specified
  - Pattern matching has been improved: we now only match whole worlds,
    e.g. "/usr/bin/perl5.005" is no longer erroneously replaced with
    "${perl_CMD}5.005".

  Note that *_OLD_CMD entries which contain spaces must now be quoted.

20150928: