@@ -48,7 +48,7 @@ CONFFILES=	example.conf input.conf menu.conf dvb-menu.conf
 USES+=		iconv pkgconfig
 
 .include "${.CURDIR}/../../multimedia/mplayer/Makefile.optvars"
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
 CONFIGURE_ARGS+=	--disable-arts \
 			--disable-directfb \
@@ -63,8 +63,6 @@ CONFIGURE_ARGS+=	--disable-arts \
 			--disable-mpg123 \
 			--disable-musepack \
 			--disable-theora
-
-.include "${.CURDIR}/../../multimedia/mplayer/Makefile.options"
 
 .if ${PORT_OPTIONS:MGUI} && ${PORT_OPTIONS:MX11}
 PLIST_SUB+=	GMPLAYER=""
@@ -114,6 +112,9 @@ CONFIGURE_ARGS+=--enable-xvmc --with-xvmclib=XvMCW
 .else	#X11
 CONFIGURE_ARGS+=--disable-x11
 .endif
+
+.include <bsd.port.pre.mk>
+.include "${.CURDIR}/../../multimedia/mplayer/Makefile.options"
 
 pre-everything::
 	@${ECHO_MSG} "N - O - T - E"
